fixed fav menu z-index

--- a/src/App.css
+++ b/src/App.css
@@ -266,6 +266,7 @@ input {
   top: 0;
   background-color: red;
   display: none;
+  z-index: 2;
 }
 
 #favOff {
